--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,18 @@ height: 100%;
 width: 100%;
 }
 
+#menu{
+    display: block;
+    cursor: pointer;
+}
+
+#bar1, #bar2, #bar3 {
+    width: 24px;
+    height: 3px;
+    background-color: #333;
+    margin: 3px 0;
+    transition: 0.3s;
+    border-radius: 10px;
+    opacity: 100%;
+    transform: rotate(0) translate(0,0);
+}
