--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,84 @@
-html{
-font-size: 100%;
-height: 100%;
-width: 100%;
+
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav{
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 46px;
+    background-color:white;
+    z-index: 3;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+}
+.navigationContainer{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #menu{
-    display: block;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
 }
 
 #bar1, #bar2, #bar3 {
-    width: 24px;
-    height: 3px;
-    background-color: #333;
-    margin: 3px 0;
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    margin: 3px;
     transition: 0.3s;
     border-radius: 10px;
     opacity: 100%;
     transform: rotate(0) translate(0,0);
+    transform-origin: center;
+}
+
+#categories{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+
+main{
+    z-index: 1;
+    margin-top: 46px;
+    margin-bottom: 48px;
+    height: calc(100vh - 94px);
+}
+
+footer{
+    z-index: 1;
+    width: 100%;
+    height: 48px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
