--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,66 @@ nav{
     align-items: center;
     transition: all 0.3s;
 }
+.categoriesContainer{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.categoriesHeader{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+    flex-direction: row;
+}
+.categoriesSub{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+    flex-direction: column;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+.categoriesExtender{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: darkturquoise;
+    position: relative;
+}
+
+#categoriesExtenderBar1{
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    margin: 3px;
+    transition: 0.3s;
+    border-radius: 10px;
+    opacity: 100%;
+    transform: rotate(0) translate(0,0);
+    transform-origin: center;
+}
+#categoriesExtenderBar2{
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    margin: 3px;
+    transition: 0.3s;
+    border-radius: 10px;
+    opacity: 100%;
+    transform: rotate(90deg) translate(0,0);
+    transform-origin: center;
+}
 
 main{
     z-index: 1;
