--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body{
     width: 100%;
     margin: 0;
     font-size: 16px;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
