--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,24 @@
     display: none;
 }
 h1{
-    font-size: 1.5rem
+    font-size: 1.3125rem;
+    font-weight: normal;
 }
 h2{
-    font-size: 1.5rem
+    font-size: 1.5rem;
 }
 h3{
-    font-size: 1.375rem
+    font-size: 1.375rem;
 }
 h4{
-    font-size: 1.25rem
+    font-size: 1.25rem;
 }
 h5{
-    font-size: 1.125rem
+    font-size: 1.125rem;
 }
 h6{
-    font-size: 1rem
+    font-size: 1rem;
+
 }
 p{
     font-size: 0.875rem;
@@ -34,7 +36,7 @@ body{
     overflow-x: hidden;
 }
 
-#navigationMobile{
+nav{
     position: fixed;
     top: 0;
     width: 100vw;
@@ -44,37 +46,16 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-left: 12px;
+    padding-right: 12px;
 }
-#navigationMain{
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    height: 46px;
-    background-color:white;
-    z-index: 3;
-    display: none;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.navigationSection{
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-.navigationContainerMobile{
+
+.navigationContainer{
     width: 32px;
     height: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.navigationContainerMain{
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content:flex-start;
 }
 
 #menu{
@@ -101,28 +82,26 @@ body{
 }
 
 #layerHider{
-    position: fixed;
-    width: 100%;
+    margin-top: 46px;
     height: 100%;
-    margin-top:46px;
-    background-color: black;
+    width: 100%;
+    position: fixed;
     top: 0;
-    display: none;
+    background-color: black;
     opacity: 0%;
-    z-index: 1;
     transition: all 0.3s;
-    overflow: hidden
+    z-index: 2;
 }
 
 #categories{
-    width: 50%;
+    width: 80%;
     height: 100vh;
     background-color: white;
     position: absolute;
     top: 0;
-    left: -50%;
+    left: -100%;
     margin-top: 46px;
-    z-index: 2;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -136,16 +115,23 @@ body{
     min-width: 100%;
     display: flex;
     width: 100%;
-    justify-content:space-around;
+    justify-content:space-between;
     align-items: center;
     cursor: pointer;
     flex-direction: row;
     user-select: none;
+    color: black;
+    transition: all 0.5s;
 }
+.categoriesHeader h1{
+    padding-left: 12px;
+    transition: all 0.3s;
+}
+
 .categoriesSub{
     display: none;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     cursor: pointer;
     flex-direction: column;
 }
@@ -156,6 +142,7 @@ body{
     justify-content: center;
     height: 46px;
     width: 46px;
+    transition: all 0.3s;
 }
 
 .categoriesExtenderBar1{
@@ -186,6 +173,8 @@ body{
 main{
     z-index: 0;
     margin-top: 46px;
+    margin-left: 8px;
+    margin-right: 8px;
     min-height: calc(100vh - 94px);
 }
 
@@ -198,21 +187,19 @@ footer{
     align-items: center;
 }
 
+footer::before{
+    content: "\00a9  2022 BUKANT";
+    font-size: 0.875rem;
+}
 
-@media screen and (max-width: 768px){
-    #navigationMobile{
-        display: flex;
-    }
-    #navigationMain{
-        display: none;
+@media screen and (max-width:768px){
+    #categories{
+        width: 70%;
     }
 }
 
-@media screen and (min-width: 769px){
-    #navigationMobile{
-        display: none;
-    }
-    #navigationMain{
-        display: flex;
+@media screen and (min-width:769px){
+    #categories{
+        width: 30%;
     }
 }
