--- a/css/style.css
+++ b/css/style.css
@@ -127,19 +127,18 @@ section h1{
     width: 8.25rem;
     min-width: 8.25rem;
     height: 13.2rem;
-    background-color: white;
+    background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
     margin: 12px;
-    border-radius: 8px;
+    border-radius: 12px;
     position: relative;
 }
 
 .cards:hover .cardsCover{
-    filter: blur(2px);
     opacity: 20%;
 }
 
@@ -148,7 +147,7 @@ section h1{
 }
 
 .cardsCover{
-    background: black;
+    background: linear-gradient(111deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -158,13 +157,11 @@ section h1{
     align-items: center;
     margin: 12px;
     border-radius: 8px;
-    filter: blur(0);
     z-index: 0;
-    transition: all 0.5s;
+    transition: all 0.3s;
 }
 
 .cardsDetail{
-    color: black;
     z-index: 1;
     font-size: 0.75rem;
     width: 90%;
@@ -183,6 +180,7 @@ section h1{
     flex-direction: column;
     justify-content:space-evenly;
     align-items:flex-start;
+    user-select: none;
 }
 .cardsDetailBeta{
     width: 100%;
@@ -196,8 +194,8 @@ section h1{
     width: 100%;
     height: 24px;
     margin-bottom: 12px;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     border-radius: 22px;
 }
