--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-y:scroll;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
 }
 
@@ -88,7 +92,7 @@ nav img{
 
 main{
     margin-top: 48px;
-    width: 100%;
+    width: 90%;
     min-height: calc(100vh - 96px);
     display: flex;
     flex-direction:column;
@@ -214,6 +218,9 @@ footer::before{
 }
 
 @media screen and (min-width:769px) {
+    nav{
+
+    }
     .rails{
         display: grid;
         grid-template-columns: auto auto auto auto auto;
