--- a/css/style.css
+++ b/css/style.css
@@ -31,19 +31,17 @@ nav{
     flex-direction: row;
     justify-content: space-between;
     color: white;
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     top: 0;
 }
 
 nav p{
     margin: 12px;
-    z-index: 4;
 }
 nav img{
     margin: 12px;
     filter: invert(100%);
-    z-index: 4;
 }
 
 .menu{
@@ -52,7 +50,6 @@ nav img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 4;
     
 }
 #menubar1{
@@ -86,8 +83,9 @@ nav img{
     background-color: black;
     position: fixed;
     top: 100%;
+    left: 0;
     transition: all 0.3s;
-    z-index: 3;
+    z-index: 2;
 }
 
 main{
@@ -219,8 +217,31 @@ footer::before{
 
 @media screen and (min-width:769px) {
     nav{
-
+        height: 100%;
+        background-color: black;
+        width: 48px;
+        flex-direction: column;
+        justify-content: space-between;
+        color: white;
+        z-index: 2;
+        position: fixed;
+        top: 0;
+        left:0;
     }
+    nav p{
+        transform: rotate(-90deg);
+    }
+    #categoriesMobile{
+        height: 100%;
+        width: 100%;
+        margin-top: 0;
+        margin-left: 48px;
+    }
+    main{
+        margin-top:0;
+        margin-left: 48px;
+    }
+
     .rails{
         display: grid;
         grid-template-columns: auto auto auto auto auto;
