--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-/*::-webkit-scrollbar{
+::-webkit-scrollbar{
     display: none;
-}*/
+}
+
 h1{
     font-size: 1.3125rem;
     font-weight: normal;
@@ -37,21 +38,57 @@ nav{
 }
 
 nav p{
-    margin: 12px;
-}
-nav img{
-    margin: 12px;
-    filter: invert(100%);
+    margin: 1rem;
 }
 
-.menu{
+.cartIconContainer{
     margin: 12px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+.cartIconContainer img{
+    height: 22px;
+    width: 22px;
+    filter: invert(100%);
+    cursor: pointer;
+}
+.cartCounter{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 14px;
+    height: 14px;
+    background-color: red;
+    border-radius: 22px;
+    z-index: 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     
 }
+.cartCounter p{
+    margin: 0;
+    font-size: 12px;
+    color:white; 
+    transform: rotate(0deg);
+}
+
+
+.menu{ 
+    margin: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    
+}
+
 #menubar1{
     background-color: white;
     width: 18px;
@@ -160,7 +197,7 @@ section h1{
     margin: 12px;
     border-radius: 8px;
     z-index: 0;
-    transition: all 0.3s;
+    transition: all 0.5s;
 }
 
 .cardsDetail{
@@ -173,7 +210,7 @@ section h1{
     justify-content: space-between;
     align-items:center;
     opacity: 0%;
-    transition: all 0.3s;
+    transition: all 0.5s;
 }
 
 .cardsDetailAlpha{
@@ -200,7 +237,33 @@ section h1{
     color: black;
     border: none;
     border-radius: 22px;
+    cursor: pointer;
+    user-select: none;
 }
+.cardsAdd{
+    width: 100%;
+    height: 24px;
+    margin-bottom: 12px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 22px;
+    cursor: pointer;
+    user-select: none;
+    transition: all 0.3s;
+    animation: none;
+}
+
+@keyframes cardNudge {
+    0%{transform: translate(0px);}
+    10%{transform: translate(-1px);}
+    20%{transform: translate(1px);}
+    30%{transform: translate(-1px);}
+    40%{transform: translate(1px);}
+    50%{transform: translate(-1px);}
+    100%{transform: translate(0px);}
+    
+  }
 
 footer{
     height: 48px;
