--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ nav p{
     margin: 1rem;
 }
 
-.cartIconContainer{
+
+#cartIconContainer{
     margin: 12px;
     display: flex;
     flex-direction: column;
@@ -49,8 +50,9 @@ nav p{
     align-items: center;
     cursor: pointer;
     position: relative;
+    animation: none;
 }
-.cartIconContainer img{
+#cartIconContainer img{
     height: 22px;
     width: 22px;
     filter: invert(100%);
@@ -117,12 +119,17 @@ nav p{
     justify-content: flex-start;
     align-items:center;
     color: white;
+    text-decoration: none;
     background-color: black;
     position: fixed;
     top: 100%;
     left: 0;
     transition: all 0.3s;
     z-index: 2;
+}
+#categoriesMobile a{
+    color: white;
+    text-decoration: none;
 }
 
 main{
@@ -137,11 +144,11 @@ section{
     margin-top: 12px;
     margin-bottom: 12px;
     width: 100%;
-    height: 18.5rem;
+    min-height: 18.5rem;
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items:center ;
     color: black;
 }
@@ -149,11 +156,12 @@ section{
 section h1{
     padding-left: 12px;
     padding-right: 12px;
+    display: flex;
 }
 
 .rails{
     width: 100%;
-    background-color: white;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -161,97 +169,55 @@ section h1{
     overflow-x: auto;
     overflow-y: hidden;
 }
-
-.cards{
-    width: 8.25rem;
+.card{
     min-width: 8.25rem;
-    height: 13.2rem;
-    background-color: black;
+    min-height: 22.4rem;
+    height: fit-content;
+    margin: 12px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    color: white;
-    margin: 12px;
-    border-radius: 12px;
-    position: relative;
 }
-
-.cards:hover .cardsCover{
-    opacity: 20%;
-}
-
-.cards:hover .cardsDetail{
-    opacity: 100%;
-}
-
-.cardsCover{
-    background: linear-gradient(111deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 12px;
+.bookCover{
+    min-width: 8.25rem;
+    min-height: 13.2rem;
     border-radius: 8px;
-    z-index: 0;
-    transition: all 0.5s;
+    background-color: darkturquoise;
 }
-
-.cardsDetail{
-    z-index: 1;
-    font-size: 0.75rem;
-    width: 90%;
-    height: 100%;
+.bookDetail{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items:center;
-    opacity: 0%;
-    transition: all 0.5s;
 }
-
-.cardsDetailAlpha{
-    width: 100%;
+.bookDetailAlpha{
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
-    align-items:flex-start;
-    user-select: none;
+    justify-content: space-evenly;
+    align-items: center;
 }
-.cardsDetailBeta{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-end;
-    align-items:center;
+.bookDetailAlpha p{
+    margin: 8px;
+    font-size: 0.75rem;
 }
 
-.cardsButton{
-    width: 100%;
-    height: 24px;
-    margin-bottom: 12px;
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 22px;
-    cursor: pointer;
-    user-select: none;
+.bookDetailBeta{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
-.cardsAdd{
-    width: 100%;
-    height: 24px;
-    margin-bottom: 12px;
-    background-color: white;
-    color: black;
+
+.bookButton{
+    line-height: 1rem;
+    margin: 0;
+    width: 90%;
+    margin-bottom: 8px;
     border: none;
     border-radius: 22px;
-    cursor: pointer;
-    user-select: none;
-    transition: all 0.3s;
-    animation: none;
+    background-color: black;
+    color: white;
 }
 
 @keyframes cardNudge {
@@ -312,4 +278,21 @@ footer::before{
         align-items:center ;
         overflow: hidden;
     }
+}
+
+#invalidUsername{
+    color: red;
+    display:none;
+
+}
+#invalidPassword{
+    color: red;
+    display:none;
+}
+
+#loginForm{
+    display: none;
+}
+#loggedIn{
+    display: none;
 }
