--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,6 @@ footer::before{
 #loginForm{
     max-width: 375px;
     width: 100%;
-    margin:28px;
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -315,14 +314,14 @@ footer::before{
 #regForm{
     max-width: 375px;
     width: 100%;
-    margin:28px;
-    display: Flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: all 0.3s;
 }
 #loggedIn{
+    padding-top: 12px;
     width: 100%;
     display: none;
     flex-direction: column;
@@ -360,6 +359,25 @@ footer::before{
     justify-content: flex-start;
     align-items: flex-start;
 }
+.useridContainerR div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.useridContainerR div div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.useridContainerR div div p{
+    margin: 4px;
+}
+
+
 .ebook{
     min-width: 8.25rem;
     min-height: 13.2rem;
