--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ nav p{
     filter: invert(100%);
     cursor: pointer;
 }
-.cartCounter{
+#cartCounter{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -69,16 +69,16 @@ nav p{
     background-color: red;
     border-radius: 22px;
     z-index: 4;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     user-select: none;
     
 }
-.cartCounter p{
+#cartCounter p{
     margin: 0;
-    font-size: 12px;
+    font-size: 10px;
     color:white; 
     transform: rotate(0deg);
 }
