--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav p{
 }
 
 #categoriesMobile{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     margin-top: 48px;
     display: flex;
@@ -130,9 +130,28 @@ nav p{
     transition: all 0.3s;
     z-index: 2;
 }
-#categoriesMobile a{
+.categoriesTitle{
+    width: 100%;
     color: white;
-    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+}
+#booksCategory, #aboutCategory, #artCategory{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    font-size: 1rem;
+    margin-bottom: 12px;
+}
+#booksAdd, #aboutAdd, #artsAdd{
+    transform: rotate(0deg);
+    color: white;
+    transition: all 0.2s ease;
+    font-size: 1.5rem;
 }
 
 main{
