--- a/css/style.css
+++ b/css/style.css
@@ -137,15 +137,17 @@ nav p{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    user-select: none;
+    cursor: pointer;
 }
 #booksCategory, #aboutCategory, #artCategory{
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items:center;
+    text-decoration: underline;
     font-size: 1rem;
-    margin-bottom: 12px;
 }
 #booksAdd, #aboutAdd, #artsAdd{
     transform: rotate(0deg);
