--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root{
+    --color-primary: black;
+    --color-secondary: white;
+    --body-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --body-font-size:1rem;
+    --body-font-weight:400;
+    --body-line-height: 1.5;
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
@@ -11,8 +20,6 @@ h1{
     height: 100%;
     width: 100%;
     margin: 0;
-    font-size: 16px;
-    -webkit-tap-highlight-color: transparent;
     outline: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-y:scroll;
@@ -22,6 +29,13 @@ h1{
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    margin: 0;
+    font-family: var(--bs-body-font-family);
+    font-size: var(--bs-body-font-size);
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--bs-body-line-height);
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 nav{
