--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ h1{
     width: 100%;
     margin: 0;
     outline: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-y:scroll;
     overflow-x: hidden;
     display: flex;
@@ -29,11 +28,10 @@ h1{
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    margin: 0;
-    font-family: var(--bs-body-font-family);
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
+    font-family: var(--body-font-family);
+    font-size: var(--body-font-size);
+    font-weight: var(--body-font-weight);
+    line-height: var(--body-line-height);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
