--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 :root{
     --color-primary: black;
     --color-secondary: white;
+    --color-tertiary: rgb(135,206,235);
     --body-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --body-font-size:1rem;
     --body-font-weight:400;
     --body-line-height: 1.5;
 }
 
-::-webkit-scrollbar{
+/*:-webkit-scrollbar{
     display: none;
-}
+}*/
 
 h1{
     font-size: 1.3125rem;
@@ -38,7 +39,7 @@ h1{
 
 nav{
     height: 48px;
-    background-color: black;
+    background-color: var(--color-primary);
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -55,6 +56,29 @@ nav p{
     user-select: none;
 }
 
+.description{
+    text-align: justify;
+    font-size: 0.875rem;
+}
+.tag{
+    text-align: left;
+    width: 100%;
+}
+
+.miscinfo{
+    font-size: 0.875rem;
+    text-align: justify;
+}
+
+
+.otherInformation{
+    width: 75%;
+    text-align: center;
+    display:flex ;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.75rem;
+}
 
 #cartIconContainer{
     margin: 12px;
@@ -66,12 +90,14 @@ nav p{
     position: relative;
     animation: none;
 }
+
 #cartIconContainer img{
     height: 22px;
     width: 22px;
     filter: invert(100%);
     cursor: pointer;
 }
+
 #cartCounter{
     position: absolute;
     top: 50%;
@@ -129,13 +155,14 @@ nav p{
     height: 100vh;
     width: 100%;
     margin-top: 48px;
+    margin-bottom: 48px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items:center;
     color: white;
     text-decoration: none;
-    background-color: black;
+    background-color: var(--color-primary);
     position: fixed;
     top: 100%;
     left: 0;
@@ -143,7 +170,7 @@ nav p{
     z-index: 2;
 }
 .categoriesTitle{
-    width: 100%;
+    width: 50%;
     color: white;
     display: flex;
     flex-direction: row;
@@ -152,14 +179,21 @@ nav p{
     font-size: 1.25rem;
     user-select: none;
     cursor: pointer;
+    transition: all 0.3s;
 }
+
+.categoriesTitle:hover{
+    color: var(--color-tertiary);
+}
+
 #booksCategory, #aboutCategory, #artCategory{
+    width: 50%;
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    text-decoration: underline;
     font-size: 1rem;
+    text-decoration: underline;
 }
 #booksAdd, #aboutAdd, #artsAdd{
     transform: rotate(0deg);
@@ -220,6 +254,18 @@ section h1{
     border-radius: 8px;
     background-color: var(--color-primary);
 }
+.Acard{
+    height: fit-content;
+    margin: 12px;
+    display: flex;
+    width: fit-content;
+}
+.AbookCover{
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary);
+}
+
 .bookDetail{
     width: 100%;
     display: flex;
@@ -249,6 +295,7 @@ section h1{
     height:1.7rem;
     margin: 0;
     width: 90%;
+    max-width: 128px;
     margin-bottom: 8px;
     border: none;
     border-radius: 22px;
@@ -379,34 +426,14 @@ footer::before{
     border-radius: 50%;
     background-color: green;
 }
-.useridContainerL{
+.useridContainer{
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.useridContainerR{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-.useridContainerR div{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.useridContainerR div div{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
+
 .useridContainerR div div p{
     margin: 4px;
 }
@@ -426,6 +453,7 @@ footer::before{
 .accountButton{
     line-height: 1rem;
     width: 50%;
+    max-width: 128px;
     margin: 8px;
     padding: 4px;
     border: none;
@@ -433,4 +461,20 @@ footer::before{
     background-color: black;
     color: white;
     cursor: pointer;
+}
+
+.accountOrderTable{
+    table-layout:fixed;
+    width: 100%;
+    font-size: 0.75rem;
+    margin: 0;
+    padding: 0;
+}
+.accountOrderTable th{
+    background-color: black;
+    color: white;
+}
+.accountOrderTable td, th{
+    border: 1px solid black;
+    text-align: center;
 }
