--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
     --color-primary: black;
     --color-secondary: white;
     --color-tertiary: rgb(135,206,235);
-    --body-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --body-font-family: 'Roboto', sans-serif;
     --body-font-size:1rem;
     --body-font-weight:400;
     --body-line-height: 1.5;
@@ -17,17 +19,60 @@ h1{
     font-weight: normal;
 }
 
+.bukantBanner{
+    width: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    
+}
+.bukantBanner img{
+    width: 30%;
+    margin: 12px;
+    
+}
+
 .logo{
-    width: 50%;
+    height: auto;
+    width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 8px;
 }
 .logo img{
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: fit-content;
     cursor:pointer;
 }
+
+#logoMobile{
+    display: flex;
+}
+#logoWeb{
+    display: none;
+}
+
+
+@media screen and (min-width:1024px) {
+    .bukantBanner{
+        display: flex;
+    }
+    .logo{
+        height: fit-content;
+        width: 50%;
+        margin-left: 25%;
+    }
+
+    #logoMobile{
+        display: none;
+    }
+    #logoWeb{
+        display: flex;
+    }
+    
+}
+
 #body{
     height: 100%;
     width: 100%;
@@ -59,6 +104,13 @@ nav{
     z-index: 3;
     position: fixed;
     top: 0;
+    user-select: none;
+}
+
+nav div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav p{
@@ -86,9 +138,51 @@ nav p{
     width: 75%;
     text-align: center;
     display:flex ;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.otherInformation p{
     font-size: 0.75rem;
+    cursor: pointer;
+    user-select: none;
+    margin: 3px;
+    color: #444;
+    text-decoration: underline;
+}
+
+.socials{
+    width: 80%;
+}
+.socials div{
+    text-align: center;
+    width: 100%;
+}
+
+.socialsIcons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#instagram:hover{
+    fill: #8a3ab9;
+}
+
+#facebook:hover{
+    fill:#3b5998;
+}
+
+#youtube:hover{
+    fill: #c4302b;
+}
+.socialsIcons svg{
+    width: 3rem;
+    height: 3rem;
+    margin: 8px;
+    transition: all 0.3s;
+    cursor: pointer;
 }
 
 #cartIconContainer{
@@ -347,7 +441,7 @@ footer::before{
     content: "Copyright \00a9   2022 BUKANT";
 }
 
-@media screen and (min-width:769px) {
+@media screen and (min-width:1024px) {
     nav{
         height: 100%;
         background-color: black;
@@ -359,10 +453,6 @@ footer::before{
         position: fixed;
         top: 0;
         left:0;
-    }
-    .logo{
-        transform: rotate(-90deg);
-        width: 100%;
     }
     .logo img{
         height: 100%;
@@ -518,7 +608,7 @@ footer::before{
     height: 50%;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1024px) {
     .displayBanner{
         width: 50%;
     }
