--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,10 @@ h1{
     }
     .logo{
         height: fit-content;
-        width: 50%;
-        margin-left: 25%;
+        width: 80%;
+        margin: 0;
+        margin-left:10% ;
+        
     }
 
     #logoMobile{
@@ -338,12 +340,10 @@ section h1{
     height: fit-content;
     display: grid;
     grid-template-columns: auto auto;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items:center ;
 }
 .card{
-    min-width: 8.25rem;
-    min-height: 18.4rem;
     height: fit-content;
     margin: 12px;
     display: flex;
@@ -354,6 +354,9 @@ section h1{
 .bookCover{
     width: 100%;
     height: 100%;
+    margin: 18px;
+    max-width: 196px;
+    max-height: 278px;
 }
 .bookCoverDetails{
     width: 100%;
@@ -380,6 +383,11 @@ section h1{
     user-select: none;
 }
 
+.authorDetails{
+    width: 50%;
+    height: 50%;
+}
+
 .authorCover{
     height: 9rem;
     width: 9rem;
@@ -390,6 +398,10 @@ section h1{
 }
 
 @media screen and (min-width:1024px) {
+    .bookCover{
+        width: 75%;
+        height: 75%;
+    }
     .bookCoverDetails{
         width: 50%;
         height: 50%;
@@ -397,6 +409,10 @@ section h1{
     .authorCover{
         width: 75%;
         height: 75%;
+    }
+    .authorDetails{
+        width: 25%;
+        height: 25%;
     }
     .authorRails{
         grid-template-columns: auto auto auto auto;
