--- a/css/posterpoetrystyle.css
+++ b/css/posterpoetrystyle.css
@@ -1,36 +1,11 @@
-.posterPoetry{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    height: 64px;
-    width: 80%;
-    text-align: center;
-    margin: 18px;
-    cursor: pointer;
-    transition: all 0.3s;
-    font-size: 1rem;
-    border-radius: 6px;
-}
-
-.posterPoetry:hover{
-    font-size: 1.05rem;
-}
-
-.episode1{
-    color: black;
-    background: rgb(158,252,139);
-    background: linear-gradient(111deg, rgba(158,252,139,1) 0%, rgba(148,183,233,1) 100%);
-}
-
-.tba{
-    color: white;
-    background: black;
-}
-
 .posterPoetryContent{
     display: grid;
     grid-template-columns: auto;
-    width:80%
+    width:100%;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-gap: 16px;
 }
 
 .posterPoetryContent img{
@@ -38,12 +13,40 @@
     height: 100%;
 }
 
+.posterRail{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 16px;
+}
 
-@media screen and (min-width:769px){
-    .posterPoetry{
-        width: 60%;
-    }
+.posterRail div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+}
+
+.posterRail div img{
+    width: 100%;
+    height: 100%;
+}
+.posterRail p{
+    font-size: 1.125rem;
+    
+}
+
+
+
+@media screen and (min-width:1024px){
     .posterPoetryContent{
+        width: 80%;
+        grid-template-columns: auto auto;
+    }
+    .posterRail{
         width: 80%;
         grid-template-columns: auto auto;
     }
